--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
+    "react-carousel-minimal": "^1.3.4",
     "react-dom": "^17.0.2",
     "react-multi-carousel": "^2.6.5",
     "react-responsive": "^9.0.0-beta.4",
